# sturges-segmentation

./: .envrc.example  README.md  pyproject.toml
notebooks/: .envrc.example  tree.ipynb  tree_numeric_only.ipynb
src/: .envrc.example
src/data/: download_example.py  download_sample.py
src/segmentation/: tree_numeric_only.py
