[tool.poetry]
name = "sturges-segmentation"
version = "0.1.0"
description = ""
authors = ["Masato Omori <masato.omori@louisvuitton.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
