[tool.poetry]
name = "sturges-segmentation"
version = "0.1.0"
description = ""
authors = ["Masato Omori <masato.omori@louisvuitton.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
jupyter = "^1.0.0"
polars = "^0.20.25"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
